Fix main__container margin-top on mobile

--- a/src/styles/scss/base/_main.scss
+++ b/src/styles/scss/base/_main.scss
@@ -5,12 +5,11 @@ $block: 'main';
 .#{$block} {
 	&__container {
 		@include container;
-		// padding-left: 1rem;
-		// padding-right: 1rem;
 
-		// @include media-min(md) {
-		// 	padding-left: 3rem;
-		// 	padding-right: 3rem;
-		// }
+		margin-top: 1rem;
+
+		@include media-min(sm) {
+			margin-top: 0;
+		}
 	}
 }
